welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: ')' expected but 'else' found.
	else {return 0}
        ^